--- a/docker/Dockerfile.linux-aarch64
+++ b/docker/Dockerfile.linux-aarch64
@@ -6,8 +6,8 @@
 # The smoke stage runs a native arm64 image — requires QEMU on x86_64 hosts:
 #   docker run --privileged --rm tonistiigi/binfmt --install arm64
 
-# ── Stage 1: build (cross-compile on x86_64) ──────────────────────────
-FROM debian:bookworm-slim AS build
+# ── Stage: base (toolchain + system deps) ────────────────────────────
+FROM debian:bookworm-slim AS base
 
 ENV DEBIAN_FRONTEND=noninteractive
 RUN dpkg --add-architecture arm64 \
@@ -24,11 +24,26 @@ RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | \
     sh -s -- -y --default-toolchain stable --profile minimal
 ENV PATH="/root/.cargo/bin:${PATH}"
 RUN rustup target add aarch64-unknown-linux-gnu
+ENV CARGO_INCREMENTAL=0
 
 RUN printf '[target.aarch64-unknown-linux-gnu]\nlinker = "aarch64-linux-gnu-gcc"\n' \
     >> /root/.cargo/config.toml
 
 WORKDIR /src
+
+# ── Stage: deps (compile dependencies only) ──────────────────────────
+FROM base AS deps
+
+COPY Cargo.toml Cargo.lock build.rs ./
+RUN mkdir src && echo 'fn main() {}' > src/main.rs
+RUN PKG_CONFIG_SYSROOT_DIR=/usr/aarch64-linux-gnu \
+    PKG_CONFIG_PATH=/usr/lib/aarch64-linux-gnu/pkgconfig \
+    cargo build --release --target aarch64-unknown-linux-gnu 2>&1 \
+    || true
+
+# ── Stage: build (compile lv only) ───────────────────────────────────
+FROM deps AS build
+
 COPY . .
 RUN PKG_CONFIG_SYSROOT_DIR=/usr/aarch64-linux-gnu \
     PKG_CONFIG_PATH=/usr/lib/aarch64-linux-gnu/pkgconfig \
@@ -36,14 +51,17 @@ RUN PKG_CONFIG_SYSROOT_DIR=/usr/aarch64-linux-gnu \
     && cp target/aarch64-unknown-linux-gnu/release/lv /tmp/lv \
     && aarch64-linux-gnu-strip /tmp/lv
 
+# ── Stage: package (.deb) ────────────────────────────────────────────
+FROM build AS package
+
 RUN LV_VERSION=$(grep '^version' Cargo.toml | head -1 | sed 's/.*"\(.*\)"/\1/') \
     bash pkg/deb.sh arm64 /tmp/lv
 
-# ── Stage 2: smoke test (native arm64 via QEMU) ───────────────────────
+# ── Stage: smoke test (native arm64 via QEMU) ───────────────────────
 FROM --platform=linux/arm64 ubuntu:22.04 AS smoke
 
 ENV DEBIAN_FRONTEND=noninteractive
-COPY --from=build /src/lv_*_arm64.deb /tmp/
+COPY --from=package /src/lv_*_arm64.deb /tmp/
 RUN apt-get update -qq \
     && apt-get install -y -qq /tmp/lv_*_arm64.deb \
     && rm -rf /var/lib/apt/lists/*
@@ -52,6 +70,6 @@ COPY test/fixtures/ /fixtures/
 COPY scripts/smoke-test-cli.sh /scripts/smoke-test-cli.sh
 RUN LV_FIXTURES=/fixtures LV_DB_PATH=/tmp/lv-smoke.db bash /scripts/smoke-test-cli.sh
 
-# ── Stage 3: output artifact ──────────────────────────────────────────
+# ── Stage: out (extract artifacts) ───────────────────────────────────
 FROM scratch AS out
-COPY --from=build /src/lv_*_arm64.deb /
+COPY --from=package /src/lv_*_arm64.deb /
