ci: add universe repo to arm64 smoke test for libmpv2

--- a/docker/Dockerfile.linux-aarch64
+++ b/docker/Dockerfile.linux-aarch64
@@ -63,6 +63,9 @@ FROM --platform=linux/arm64 ubuntu:22.04 AS smoke
 ENV DEBIAN_FRONTEND=noninteractive
 COPY --from=package /src/lv_*_arm64.deb /tmp/
 RUN apt-get update -qq \
+    && apt-get install -y -qq software-properties-common \
+    && add-apt-repository -y universe \
+    && apt-get update -qq \
     && apt-get install -y -qq /tmp/lv_*_arm64.deb \
     && rm -rf /var/lib/apt/lists/*
 
